--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,20 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.2.2
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
   sqflite: ^2.3.0
   path: ^1.8.3
   path_provider: ^2.1.1
-  intl: ^0.19.0
+  intl: 0.18.1
   image_picker: ^1.0.5
+  syncfusion_flutter_calendar: ^21.2.3
+  table_calendar: ^3.0.2
+ 
+  
+
 
 dev_dependencies:
   flutter_test:
