--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,9 @@ flutter:
     - assets/images/Bald-Muscular-Body-Builder-Flexing-His-Biceps.jpg
     - assets/images/stretching-man-GettyImages-654424976.jpg
     - assets/images/average-chest-size-men.png
+    - assets/images/Hamstrings-Times-Two.jpg
+    - assets/images/360_F_502926966_riOCh73mHgYUHnNqfz7hxJrxjcHnjC7K.jpg
+    - assets/images/istockphoto-679305702-170667a.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
