--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,8 @@ flutter:
     - assets/images/Hamstrings-Times-Two.jpg
     - assets/images/360_F_502926966_riOCh73mHgYUHnNqfz7hxJrxjcHnjC7K.jpg
     - assets/images/istockphoto-679305702-170667a.jpg
+    - assets/images/chest_feature.webp
+    - assets/images/greatest-abs-exercises-1445673601.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
