--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,7 +92,6 @@ flutter:
     - assets/images/Screenshot 2023-12-18 235023.png
     - assets/images/Screenshot 2023-12-18 185831.png
     - assets/images/Screenshot 2023-12-19 140455.png
-    - assets/images/images.png
     - assets/images/powerful-fitness-gym-background_849761-28989.jpg
     - assets/images/5-Mandatory-Athletic-Exercises-for-Non-Athletes.jpeg
     - assets/images/48201119-athlete-muscular-bodybuilder-training-in-the-gym-back-training-in-gym.jpg
@@ -113,6 +112,7 @@ flutter:
     - assets/images/284-2840011_person-in-gray-hoodie-using-computer-inside-dark.jpg
     - assets/images/flat-lay-crossfit-gym-equipment_403156-27.avif
     - assets/images/qrcode_www.mountsinai.org.png
+    - assets/images/218738-200.png
     - assets/images/5580709.png
   
   
