--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,28 @@ flutter:
     - assets/images/qrcode_www.mountsinai.org.png
     - assets/images/218738-200.png
     - assets/images/5580709.png
+    - assets/images/Bench-Press-tutorial_chest-1000x600.jpeg
+    - assets/images/1216.jpg
+    - assets/images/1000_F_427976553_WDdANdVpaRJMYoSCClbNDBTdJr3L3SvP.jpg 
+    - assets/images/download (2).jpeg
+    - assets/images/achilles-tendinopathy-featured-image-881x496.jpg
+    - assets/images/og-male-Barbell-barbell-wrist-curl-front.png
+    - assets/images/shutterstock_430434973_1600x.webp
+    - assets/images/download (5).jpeg
+    - assets/images/Psoas-twist-1080x675.jpg
+    - assets/images/shutterstock_1957199755_1000x.webp
+    - assets/images/biceps_standing.jpg
+    - assets/images/8.gif
+    - assets/images/25829.gif
+    - assets/images/seated-v-bar-cable-row-exercise.gif
+    - assets/images/21544.gif
+    - assets/images/cable-kickback.gif
+    - assets/images/7b9651f3ad4c05bab422a7fece5e470a.gif
+    - assets/images/barbell-wrist-curl.gif
+    - assets/images/lying-leg-curl.gif
+    - assets/images/Barbell-Front-Raise.gif
+    - assets/images/Hip-Flexor-Hero.webp
+    - assets/images/weighted-push-up.webp
   
   
 
