--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"> 
     <application
-        android:label="fittrack"
+        android:label="FitTrack"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
