--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.0
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -50,6 +50,7 @@ dependencies:
   url_launcher: ^6.2.4
   flutter_local_notifications: ^16.3.2
   datetime_picker_formfield_new: ^2.1.0
+  floating_action_bubble: ^1.1.4
 
 
  
@@ -136,6 +137,7 @@ flutter:
     - assets/images/Barbell-Front-Raise.gif
     - assets/images/Hip-Flexor-Hero.webp
     - assets/images/weighted-push-up.webp
+    - assets/images/66492400.jpg
   
   
 
